# rollup-sequencer

./: .gitignore  Cargo.toml  README.md
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: api.md  architecture.md  demo.md  design-decisions.md
src/: main.rs
tests/: l1_settlement_integration.rs
