[package]
name = "rollup-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "crates/types" }
mempool = { path = "crates/mempool" }
storage = { path = "crates/storage" }
consensus = { path = "crates/consensus" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rpc = { path = "crates/rpc" }
