[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
types = { path = "../types" }
consensus = { path = "../consensus" }
storage = { path = "../storage" }
tracing = "0.1"
hex = "0.4"
networking = { path = "../networking" }
metrics = { path = "../metrics" }
